fix overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -74,6 +74,7 @@
 
 .inner_phrase_box {
   padding: 10px;
+  overflow: hidden;
 }
 
 .phrase_box {
